--- a/SeaBattleASP/appsettings.json
+++ b/SeaBattleASP/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=task5db;Trusted_Connection=True;"
+  },
+
   "AllowedHosts": "*"
 }
