Rewrite Move()  and MakeStep() methods. For Ship rewrite Direction property

--- a/SeaBattleASP/SeaBattleASP.csproj
+++ b/SeaBattleASP/SeaBattleASP.csproj
@@ -12,4 +12,6 @@
  
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
