--- a/SeaBattleASP/appsettings.json
+++ b/SeaBattleASP/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=myDB369;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=myDBT;Trusted_Connection=True;"
   },
 
   "AllowedHosts": "*"
